--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -1,23 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Poppins&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   z-index: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   transition: 0.3s;
 }
 
 .home-container {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 main {
   overflow: hidden;
   height: auto;
 }
-
 
 /* ----------------------------- 輪播圖 ----------------------------- */
 
@@ -54,11 +53,11 @@ main {
 
 @keyframes fade {
   from {
-    opacity: .4
+    opacity: 0.4;
   }
 
   to {
-    opacity: 1
+    opacity: 1;
   }
 }
 
@@ -123,7 +122,6 @@ main {
   grid-template-columns: auto auto auto auto auto auto;
 }
 
-
 .hotplace {
   text-decoration: none;
   padding-left: 30px;
@@ -134,9 +132,7 @@ main {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-
 }
-
 
 .hottext {
   text-align: center;
@@ -144,7 +140,6 @@ main {
   font-weight: bolder;
   font-size: 20px;
 }
-
 
 /* ----------------------------- Tabs ----------------------------- */
 .tabs_box {
@@ -180,13 +175,13 @@ main {
   display: none;
 }
 
-.tabs_radio:checked+.tabs_label {
+.tabs_radio:checked + .tabs_label {
   font-weight: bold;
-  color: #F7C242;
-  border-bottom: 2px solid #F7C242;
+  color: #f7c242;
+  border-bottom: 2px solid #f7c242;
 }
 
-.tabs_radio:checked+.tabs_label+.tabs_content {
+.tabs_radio:checked + .tabs_label + .tabs_content {
   display: initial;
 }
 
@@ -212,7 +207,7 @@ main {
   margin: 1rem;
   padding: 1rem;
   border-radius: 30px;
-  box-shadow: 3px 5px 3px #D8D8D8;
+  box-shadow: 3px 5px 3px #d8d8d8;
   cursor: pointer;
 }
 
@@ -230,6 +225,11 @@ main {
   color: black;
 }
 
+.grid_text_txt {
+  font-size: 20px;
+  font-weight: bolder;
+}
+
 /* ----------------------------- RWD ----------------------------- */
 @media screen and (max-width: 1300px) {
   .grid-container {
@@ -237,7 +237,6 @@ main {
     grid-template-columns: auto auto;
     padding: 5px;
   }
-
 }
 
 @media screen and (max-width: 968px) {
@@ -255,7 +254,6 @@ main {
     display: grid;
     grid-template-columns: auto;
   }
-
 }
 
 @media screen and (max-width: 484px) {
