--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -108,6 +108,7 @@
   font-size: 24px;
   width: 100%;
   margin: 10px auto;
+  text-align: center;
 }
 
 .allActivity {
@@ -140,7 +141,7 @@
 
 .uploadImage > img {
   width: 80%;
-  height: 30vh;
+  height: 40vh;
   border-radius: 20px;
 }
 
@@ -161,7 +162,7 @@
   resize: none;
   font-size: 1rem;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: lightgray;
 }
 
 .meetForm {
