--- a/React-vite/src/activity/style1.css
+++ b/React-vite/src/activity/style1.css
@@ -116,20 +116,34 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-.tagBox {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.tag {
+.test.tagAfter {
   background-color: #f7c242;
   padding: 10px;
   margin: 10px;
   border-radius: 20px;
   width: 100px;
+  height:40px;
   text-align: center;
+  cursor: pointer;
+}
+
+.tagBox {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.test.tag {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+  width: 100px;
+  height:40px;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid grey;
 }
 /* 上傳圖片的設定 */
 .imageUpload {
