--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -14,6 +14,8 @@ body {
   max-width: 745.81px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   padding-top: 1rem;
+  padding-bottom: 4rem;
+  margin-bottom: 4rem;
 }
 
 /* --------------------------- 會員大頭貼、姓名及生日（上面區塊）-start --------------------------- */
@@ -21,9 +23,11 @@ body {
 .clickable {
   cursor: pointer;
 }
+
 .photo-none{
   display: none;
 }
+
 .member-photo > p {
   display: flex;
   font-weight: bold;
@@ -33,6 +37,7 @@ body {
   align-items: center;
 
 }
+
 .member-photo {
   width: 100px;
   height: 100px;
@@ -40,6 +45,7 @@ body {
   margin-right: 20px;
   border: #000000 1px solid;
 }
+
 .member-input {
   outline-style: none;
   border: 0px;
@@ -50,6 +56,7 @@ body {
   border: 0px;
   background-color: transparent;
 }
+
 .member-intro {
   position: relative;
   display: flex;
@@ -73,7 +80,7 @@ body {
   position: relative;
 }
 
-.member-tab > input {
+.member-tab>input {
   display: none;
 }
 
@@ -91,17 +98,42 @@ body {
   background-color: transparent;
 }
 
-.member-form-content {
+.member-form-conetent-edit {
   order: 1;
-  display: none;
   width: 100%;
   line-height: 1.6;
   font-size: 1.2em;
-  /* padding: 15px; */
-  /* text-align: left; */
-  /* border-radius: 5px; */
-  /* border: 1px solid #ddd; */
-  /* border-bottom: 3px solid #ddd; */
+  position: relative;
+  height: 500px;
+}
+
+.member-form-content {
+  order: 1;
+  display: none;
+  width: 65%;
+  line-height: 1.6;
+  font-size: 1.2em;
+  position: relative;
+  height: 500px;
+  overflow: overlay;
+  margin-top: 1rem;
+}
+
+.member-form-content::-webkit-scrollbar {
+  width: 10px;
+}
+
+.member-form-content::-webkit-scrollbar-track {
+  background: #f9eac8;
+}
+
+.member-form-content::-webkit-scrollbar-thumb {
+  background: #F7C242;
+}
+
+.member-form-content::-webkit-scrollbar-thumb:hover {
+  background: #e0b227;
+
 }
 
 .member-title {
@@ -109,13 +141,13 @@ body {
   text-align: left;
 }
 
-.member-tab input:checked + .member-label,
+.member-tab input:checked+.member-label,
 .member-tab .member-label:hover {
   opacity: 0.9;
   font-weight: bold;
 }
 
-.member-tab input:checked + .member-label + .member-form-content {
+.member-tab input:checked+.member-label+.member-form-content {
   display: initial;
 }
 
@@ -141,15 +173,18 @@ body {
   background-color: transparent;
   font-size: 1.2rem;
 }
+
 .introduction-edit {
   background-color: #f5f5f5;
   border: none;
 }
+
 .introduction-edit:focus {
   outline: none;
   background-color: white;
   /* border-bottom: #f7c1427a solid; */
 }
+
 .introduction-input:focus {
   display: none;
 }
@@ -167,10 +202,12 @@ body {
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
 .introduction-textarea:focus {
   border: #f7c242 0.5px solid;
   /* border:  1px solid rgba(0, 0, 0, 0.2); */
 }
+
 /* .member-textarea:focus {
     outline: none;
     box-shadow: 0 0px 5px rgba(0, 0, 0, 0.2);
@@ -183,6 +220,7 @@ body {
   margin-left: 10px;
   padding: 2px 5px;
 }
+
 .introduction-submit:hover {
   background-color: #ffb21a;
   color: black;
@@ -201,11 +239,11 @@ body {
   border-radius: 10px;
   display: flex;
   align-items: center;
-  padding: 10px 5px;
+  padding: 10px 20px;
   font-size: medium;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  justify-content: space-evenly;
 }
+
 .organise-photo {
   width: 100px;
   border-radius: 20%;
@@ -216,13 +254,16 @@ body {
   border: 0px;
   background-color: transparent;
 }
+
 .organise-submit {
   border: 1px solid #ffb21a;
   border-radius: 10px;
   color: black;
   padding: .3rem;
-  display: block; 
+  display: block;
+  margin-left: 20px;
 }
+
 .organise-submit:hover {
   background-color: #f7c242;
   color: black;
@@ -245,6 +286,7 @@ body {
   font-size: medium;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
+
 .campaign-photo {
   width: 100px;
   border-radius: 20%;
@@ -268,6 +310,7 @@ body {
   border: 1px solid #808080;
   color: #808080;
 }
+
 .campaign-review:hover {
   background-color: #808080;
   color: white;
@@ -283,6 +326,7 @@ body {
   border: 1px solid #36bf36;
   color: #36bf36;
 }
+
 .campaign-pass:hover {
   background-color: #36bf36;
   color: white;
@@ -298,6 +342,7 @@ body {
   border: 1px solid #ff4d00;
   color: #ff4d00;
 }
+
 .campaign-unpass:hover {
   background-color: #ff4d00;
   color: white;
@@ -315,6 +360,7 @@ body {
   color: #ffb21a;
   padding: .2rem;
 }
+
 .campaign-cancel:hover {
   background-color: #ffb21a;
   color: black;
@@ -337,6 +383,7 @@ body {
   font-size: medium;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
+
 .collect-photo {
   width: 100px;
   border-radius: 20%;
@@ -347,15 +394,17 @@ body {
   border: 0px;
   background-color: transparent;
 }
+
 .collect-cancel {
-    top: 20px;
-    position: absolute;
-    left: 10px;
-    border-radius: 5px;
-    border: 1px solid #ffb21a;
-    color: #ffb21a;
-    padding: 0.2rem;
+  top: 20px;
+  position: absolute;
+  left: 10px;
+  border-radius: 5px;
+  border: 1px solid #ffb21a;
+  color: #ffb21a;
+  padding: 0.2rem;
 }
+
 .collect-cancel:hover {
   background-color: #ffb21a;
   color: black;
