--- a/React-vite/src/event/style4.css
+++ b/React-vite/src/event/style4.css
@@ -81,14 +81,18 @@
 .event_page-hostName {
   display: flex;
   margin-right: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.event_page-hostName > img {
+.event_page-hostName>img {
   border: 1px solid black;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   margin-right: 10px;
+
 }
 
 .event_page-uploadImage {
@@ -96,7 +100,7 @@
   text-align: center;
 }
 
-.event_page-uploadImage > img {
+.event_page-uploadImage>img {
   width: 70%;
   height: 40vh;
   border-radius: 20px;
@@ -108,7 +112,7 @@
   margin: 10px auto;
 }
 
-.event_page-activityText > textarea {
+.event_page-activityText>textarea {
   display: block;
   margin: 20px auto;
   padding-left: 20px;
@@ -156,6 +160,7 @@
   display: grid;
   grid-template-columns: auto;
 }
+
 .event_page-grid-item-message {
   border: 1px solid #ced4da;
   border-radius: 10px;
@@ -196,6 +201,7 @@
   transform: scale(1.1);
   transition: 0.4s;
 }
+
 .center {
   display: flex;
   justify-content: center;
