--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -137,9 +137,12 @@
 
 .uploadImage {
   text-align: center;
+  width: 80%;
+  height: 40vh;
+  border-radius: 20px;
 }
 
-.uploadImage > img {
+.uploadImage>img {
   width: 80%;
   height: 40vh;
   border-radius: 20px;
@@ -155,10 +158,11 @@
 .activityText_2 > textarea {
   display: block;
   margin: 30px auto;
-  padding-left: 20px;
-  padding-top: 20px;
-  width: 100%;
-  height: 30vh;
+  padding-left: 15px;
+  padding-right: 5px;
+  padding-top: 10px;
+  width: 80%;
+  height: 40vh;
   resize: none;
   font-size: 1rem;
   border-radius: 20px;
