--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -76,6 +76,7 @@ main {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background-color: rgba(81, 81, 81, 0.8);
 }
 
 /* Position the "next button" to the right */
