--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -24,21 +24,39 @@ body {
   cursor: pointer;
 }
 
-.photo-none{
+.photo-none {
   display: none;
+
 }
 
-.member-photo > p {
+.member-photo_span {
   display: flex;
   font-weight: bold;
   font-size: xx-large;
   justify-content: center;
-  height: 100%;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
 }
 
+.member-photo-inner {
+  border: none;
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .member-photo {
+  /* display: none; */
+  position: relative;
   width: 100px;
   height: 100px;
   border-radius: 20%;
@@ -419,7 +437,7 @@ body {
     font-size: 1.2rem;
   }
 
-  .member-input > input {
+  .member-input>input {
     font-size: 1.2rem;
   }
 }
