--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -41,14 +41,17 @@ main {
 }
 
 .mySlides.show {
-  display: block;
+  display: flex;
 }
 
 /* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
-  height: 100%;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
 }
 
 @keyframes fade {
@@ -127,6 +130,7 @@ main {
   border: none;
   padding-left: 30px;
   padding-right: 30px;
+  background-color: #f5f5f5;
 }
 
 .hotplace:hover {
