--- a/React-vite/src/aboutUsPages/Introduce.css
+++ b/React-vite/src/aboutUsPages/Introduce.css
@@ -11,10 +11,11 @@
     align-items: center;
     width: 100%;
     padding: 15px;
-    background-color: #F5F5F5;
+    background-color: var(--body_background_color);
     border-radius: 20px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     margin-top: 3rem;
+    color: var(--body_color);
 }
 
 .introduce .container_123>div>img {
