--- a/React-vite/src/activity/style1.css
+++ b/React-vite/src/activity/style1.css
@@ -20,7 +20,6 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  transition: 0.3s;
 }
 
 /* 導覽列的設定 */
@@ -56,7 +55,12 @@
   margin: 0 0 0 5px;
 }
 
+
 /* 主內容的設定 */
+.activity_all_box {
+  background-color: var(--body_background_color);
+}
+
 .activity_container {
   max-width: 1200px;
   margin: auto;
@@ -64,6 +68,8 @@
   flex-wrap: wrap;
   top: 100px;
   position: relative;
+  background-color: var(--body_background_color);
+  color: var(--body_color);
 }
 
 .progressBar {
@@ -72,7 +78,8 @@
   align-items: center;
   height: 50px;
   text-align: center;
-  background-color: #dcdcdc;
+  background-color: var(--body_background_color);
+  color: var(--body_color);
   position: sticky;
   top: 80px;
   z-index: 10;
@@ -227,7 +234,8 @@
   border: none;
   outline: none;
   background-color: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--body_color);
+  color: var(--body_color);
   padding-left: 10px;
 }
 
