--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -21,7 +21,6 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  transition: 0.3s;
 }
 
 /* 導覽列的設定 */
@@ -72,7 +71,6 @@
   align-items: center;
   height: 50px;
   text-align: center;
-  background-color: #dcdcdc;
   position: sticky;
   top: 80px;
   z-index: 10;
@@ -200,7 +198,8 @@
   border: none;
   outline: none;
   background-color: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--body_color);
+  color: var(--body_color);
   padding-left: 5px;
   margin: 10px;
 }
