--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -10,12 +10,16 @@
 }
 
 .home-container {
-  background-color: #f5f5f5;
+  background-color: var(--body_background_color);
 }
 
 main {
   overflow: hidden;
   height: auto;
+}
+
+.main_pages_j {
+  background-color: var(--body_background_color);
 }
 
 /* ----------------------------- 輪播圖 ----------------------------- */
@@ -100,7 +104,7 @@ main {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: var(--body_background_color_dot);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -116,6 +120,7 @@ main {
   display: flex;
   justify-content: center;
   margin-top: 1.5rem;
+  color: var(--body_color);
 }
 
 .hotbox {
@@ -130,7 +135,7 @@ main {
   border: none;
   padding-left: 30px;
   padding-right: 30px;
-  background-color: #f5f5f5;
+  background-color: var(--body_background_color);
 }
 
 .hotplace:hover {
@@ -145,7 +150,7 @@ main {
 
 .hottext {
   text-align: center;
-  color: black;
+  color: var(--body_color);
   font-weight: bolder;
   font-size: 20px;
 }
@@ -169,6 +174,7 @@ main {
   cursor: pointer;
   font-size: 23px;
   transition: 0.4s;
+  color: var(--body_color);
 }
 
 .tabs_radio {
@@ -207,7 +213,8 @@ main {
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
+  /* background-color: rgba(255, 255, 255, 0.8); */
+  background-color: var(--body_background_color);
   font-size: 30px;
   text-align: center;
   width: 300px;
@@ -231,7 +238,7 @@ main {
   align-items: flex-start;
   padding: 0.5rem;
   text-decoration: none;
-  color: black;
+  color: var(--body_color);
 }
 
 .grid_text_txt {
