--- a/React-vite/src/aboutUsPages/Accordion.css
+++ b/React-vite/src/aboutUsPages/Accordion.css
@@ -1,8 +1,7 @@
-
-.test1{
-    height: 700px;
-    width: 700px;
-    margin-top: 100px;
+.test1 {
+  height: 700px;
+  width: 700px;
+  margin-top: 100px;
 }
 
 body {
@@ -10,10 +9,11 @@ body {
   background: #ecf0f1;
 }
 
-h1 {
+.test1 > h1 {
   margin: 0;
   line-height: 2;
   text-align: center;
+  color: var(--body_color);
 }
 
 h2 {
@@ -29,7 +29,6 @@ h2 {
 
 .row {
   display: flex;
-
 }
 .row .col {
   flex: 1;
@@ -45,7 +44,7 @@ h2 {
 
 .tab {
   width: 100%;
-  color: #F5F5F5;
+  color: #f5f5f5;
   overflow: hidden;
 }
 .tab-label {
