--- a/React-vite/src/notifyPages/notify.css
+++ b/React-vite/src/notifyPages/notify.css
@@ -48,7 +48,7 @@
   padding: 15px;
   background-color: var(--body_background_color);
   border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   margin-top: 6rem;
   color: var(--body_color);
 }
@@ -108,12 +108,12 @@
   border-radius: 10px;
 }
 
-#user:checked~.color_box {
+#user:checked ~ .color_box {
   transform: translateX(90px);
   transition: 0.4s;
 }
 
-#info:checked~.color_box {
+#info:checked ~ .color_box {
   transform: translateX(180px);
   transition: 0.4s;
 }
@@ -153,16 +153,16 @@
   transition: 0.5s;
 }
 
-#home:checked~.text-content .home,
-#chat:checked~.text-content .chat,
-#user:checked~.text-content .user,
-#info:checked~.text-content .info {
+#home:checked ~ .text-content .home,
+#chat:checked ~ .text-content .chat,
+#user:checked ~ .text-content .user,
+#info:checked ~ .text-content .info {
   display: block;
 }
 
-#chat:checked~.text-content .home,
-#user:checked~.text-content .home,
-#info:checked~.text-content .home {
+#chat:checked ~ .text-content .home,
+#user:checked ~ .text-content .home,
+#info:checked ~ .text-content .home {
   display: none;
 }
 
@@ -226,7 +226,7 @@
 .notify_tbody_border_RED {
   border: 1px solid #ccc;
   padding: 5.5px;
-  color: #FF4500;
+  color: #ff4500;
 }
 
 .notify_tbody_border {
