--- a/React-vite/src/aboutUsPages/Accordion.css
+++ b/React-vite/src/aboutUsPages/Accordion.css
@@ -51,7 +51,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   padding: 1em;
-  background: #2c3e50;
+  background: #394f68;
   font-weight: bold;
   cursor: pointer;
 }
