--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -218,11 +218,11 @@ main {
   text-align: center;
   width: 300px;
   height: 320px;
-  border: 1px solid #ffffff;
+  border: 1px solid #f5f5f5;
   margin: 1rem;
   padding: 1rem;
   border-radius: 30px;
-  box-shadow: 3px 5px 3px #d8d8d8;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.6);
   cursor: pointer;
 }
 
