--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -1,9 +1,6 @@
-body {
-  background-color: #f5f5f5;
-}
-
 .member-body {
-  background-color: #f5f5f5;
+  background-color: var(--body_background_color);
+  color: var(--body_color);
   text-align: center;
   position: relative;
   /* border: 1px orange solid; */
@@ -12,7 +9,7 @@ body {
   min-height: 800px;
   border-radius: 20px;
   max-width: 745.81px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   padding-top: 1rem;
   padding-bottom: 4rem;
   margin-bottom: 4rem;
@@ -26,7 +23,6 @@ body {
 
 .photo-none {
   display: none;
-
 }
 
 .member-photo_span {
@@ -40,7 +36,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-
 }
 
 .member-photo-inner {
@@ -98,7 +93,7 @@ body {
   position: relative;
 }
 
-.member-tab>input {
+.member-tab > input {
   display: none;
 }
 
@@ -107,7 +102,7 @@ body {
   padding: 10px 16px;
   cursor: pointer;
   border-radius: 5px;
-  color: #000000;
+  color: var(--body_color);
   opacity: 0.5;
   border-bottom: #f7c242 solid;
   border-top: 0px;
@@ -146,12 +141,11 @@ body {
 }
 
 .member-form-content::-webkit-scrollbar-thumb {
-  background: #F7C242;
+  background: #f7c242;
 }
 
 .member-form-content::-webkit-scrollbar-thumb:hover {
   background: #e0b227;
-
 }
 
 .member-title {
@@ -159,13 +153,13 @@ body {
   text-align: left;
 }
 
-.member-tab input:checked+.member-label,
+.member-tab input:checked + .member-label,
 .member-tab .member-label:hover {
   opacity: 0.9;
   font-weight: bold;
 }
 
-.member-tab input:checked+.member-label+.member-form-content {
+.member-tab input:checked + .member-label + .member-form-content {
   display: initial;
 }
 
@@ -180,6 +174,7 @@ body {
     border-right: 0px; */
   border: 0px;
   background-color: transparent;
+  color: var(--body_color);
 }
 
 .introduction-input {
@@ -259,7 +254,7 @@ body {
   align-items: center;
   padding: 10px 20px;
   font-size: medium;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .organise-photo {
@@ -277,7 +272,7 @@ body {
   border: 1px solid #ffb21a;
   border-radius: 10px;
   color: black;
-  padding: .3rem;
+  padding: 0.3rem;
   display: block;
   margin-left: 20px;
 }
@@ -302,7 +297,7 @@ body {
   align-items: center;
   padding: 10px 20px;
   font-size: medium;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .campaign-photo {
@@ -376,7 +371,7 @@ body {
   border-radius: 5px;
   border: 1px solid #ffb21a;
   color: #ffb21a;
-  padding: .2rem;
+  padding: 0.2rem;
 }
 
 .campaign-cancel:hover {
@@ -399,7 +394,7 @@ body {
   align-items: center;
   padding: 10px 20px;
   font-size: medium;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .collect-photo {
@@ -437,7 +432,7 @@ body {
     font-size: 1.2rem;
   }
 
-  .member-input>input {
+  .member-input > input {
     font-size: 1.2rem;
   }
 }
