--- a/React-vite/src/aboutUsPages/Accordion.css
+++ b/React-vite/src/aboutUsPages/Accordion.css
@@ -1,8 +1,7 @@
-
-.test1{
-    height: 700px;
-    width: 700px;
-    margin-top: 100px;
+.test1 {
+  height: 700px;
+  width: 700px;
+  margin-top: 100px;
 }
 
 body {
@@ -10,10 +9,11 @@ body {
   background: #ecf0f1;
 }
 
-h1 {
+.test1 > h1 {
   margin: 0;
   line-height: 2;
   text-align: center;
+  color: var(--body_color);
 }
 
 h2 {
@@ -32,6 +32,8 @@ h2 {
 }
 .row .col {
   flex: 1;
+  background-color: var(--body_background_color);
+  color: var(--body_color);
 }
 
 .tabs {
@@ -42,14 +44,14 @@ h2 {
 
 .tab {
   width: 100%;
-  color: white;
+  color: #f5f5f5;
   overflow: hidden;
 }
 .tab-label {
   display: flex;
   justify-content: space-between;
   padding: 1em;
-  background: #2c3e50;
+  background: #394f68;
   font-weight: bold;
   cursor: pointer;
 }
