--- a/React-vite/src/aboutUsPages/Introduce.css
+++ b/React-vite/src/aboutUsPages/Introduce.css
@@ -1,47 +1,48 @@
-.introduce{
-    height: 2000px;
-    width: 800px;
+.introduce {
+  height: 2000px;
+  width: 800px;
 }
 
-.footer{
-    bottom: 0;
+.footer {
+  bottom: 0;
 }
 
 .introduce .container_123 {
-    align-items: center;
-    width: 100%;
-    padding: 15px;
-    background-color: #F5F5F5;
-    border-radius: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    margin-top: 3rem;
+  align-items: center;
+  width: 100%;
+  padding: 15px;
+  background-color: var(--body_background_color);
+  border-radius: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 3rem;
+  color: var(--body_color);
 }
 
-.introduce .container_123>div>img {
-    display: block;
-    margin: 0 auto;
+.introduce .container_123 > div > img {
+  display: block;
+  margin: 0 auto;
 }
 
-.introduce .container_123>div>p {
-    /* text-align: center; */
-    height: 150px;
-    padding: 30px;
+.introduce .container_123 > div > p {
+  /* text-align: center; */
+  height: 150px;
+  padding: 30px;
 }
 
 .introduce img {
-    border-radius: 20px;
-    border: 5px solid #ccc;
-    width: 740px;
+  border-radius: 20px;
+  border: 5px solid #ccc;
+  width: 740px;
 }
 
 .introduce_des {
-    /* border-radius: 20px; */
-    /* border: gray 1px solid; */
-    margin-top: 3rem;
-    height: 1000px;
+  /* border-radius: 20px; */
+  /* border: gray 1px solid; */
+  margin-top: 3rem;
+  height: 1000px;
 }
 
 .introduce_1 {
-    border-radius: 20px;   
-    margin: 1rem;
+  border-radius: 20px;
+  margin: 1rem;
 }
