--- a/React-vite/src/activity/style1.css
+++ b/React-vite/src/activity/style1.css
@@ -20,7 +20,6 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  transition: 0.3s;
 }
 
 /* 導覽列的設定 */
@@ -57,6 +56,10 @@
 }
 
 /* 主內容的設定 */
+.activity_all_box {
+  background-color: var(--body_background_color);
+}
+
 .activity_container {
   max-width: 1200px;
   margin: auto;
@@ -64,6 +67,7 @@
   flex-wrap: wrap;
   top: 100px;
   position: relative;
+  color: var(--body_color);
 }
 
 .progressBar {
@@ -72,7 +76,8 @@
   align-items: center;
   height: 50px;
   text-align: center;
-  background-color: #dcdcdc;
+  background-color: var(--body_background_color);
+  color: var(--body_color);
   position: sticky;
   top: 80px;
   z-index: 10;
@@ -113,7 +118,7 @@
   width: 80%;
   border-radius: 20px;
   padding: 20px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .test.tagAfter {
@@ -122,7 +127,7 @@
   margin: 10px;
   border-radius: 20px;
   width: 100px;
-  height:40px;
+  height: 40px;
   text-align: center;
   cursor: pointer;
 }
@@ -140,7 +145,7 @@
   margin: 10px;
   border-radius: 20px;
   width: 100px;
-  height:40px;
+  height: 40px;
   text-align: center;
   cursor: pointer;
   border: 1px solid grey;
@@ -151,7 +156,7 @@
   width: 80%;
   border-radius: 20px;
   padding: 20px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .fileLabel {
@@ -215,7 +220,7 @@
   width: 80%;
   border-radius: 20px;
   padding: 20px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .activity-upload > label {
@@ -227,7 +232,8 @@
   border: none;
   outline: none;
   background-color: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--body_color);
+  color: var(--body_color);
   padding-left: 10px;
 }
 
