--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -21,7 +21,6 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  transition: 0.3s;
 }
 
 /* 導覽列的設定 */
@@ -72,7 +71,6 @@
   align-items: center;
   height: 50px;
   text-align: center;
-  background-color: #dcdcdc;
   position: sticky;
   top: 80px;
   z-index: 10;
@@ -116,7 +114,7 @@
   width: 80%;
   border-radius: 20px;
   padding: 20px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .hostName {
@@ -142,7 +140,7 @@
   border-radius: 20px;
 }
 
-.uploadImage>img {
+.uploadImage > img {
   width: 80%;
   height: 40vh;
   border-radius: 20px;
@@ -178,7 +176,7 @@
   width: 80%;
   border-radius: 20px;
   padding: 20px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
@@ -200,7 +198,8 @@
   border: none;
   outline: none;
   background-color: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--body_color);
+  color: var(--body_color);
   padding-left: 5px;
   margin: 10px;
 }
