--- a/React-vite/src/chatgpt/chatgpt.css
+++ b/React-vite/src/chatgpt/chatgpt.css
@@ -21,6 +21,16 @@
   margin-bottom: 1rem;
 }
 
+.scrollbar-container {
+  background-color: var(--body_background_color);
+  color: var(--body_color);
+  transition: 0s;
+}
+
+.cs-message-input {
+  background-color: var(--body_background_color) !important;
+}
+
 /* ------------------------ 導覽列補充 ---------------------- */
 
 .home_header {
@@ -48,7 +58,7 @@
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   margin-top: 6rem;
 }
 
