--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -93,7 +93,7 @@
   position: relative;
 }
 
-.member-tab > input {
+.member-tab>input {
   display: none;
 }
 
@@ -133,7 +133,7 @@
 
 }
 
-.member-form-content > p {
+.member-form-content>p {
   position: absolute;
   z-index: -1;
   margin: 20px 35%;
@@ -160,13 +160,13 @@
   text-align: left;
 }
 
-.member-tab input:checked + .member-label,
+.member-tab input:checked+.member-label,
 .member-tab .member-label:hover {
   opacity: 0.9;
   font-weight: bold;
 }
 
-.member-tab input:checked + .member-label + .member-form-content {
+.member-tab input:checked+.member-label+.member-form-content {
   display: initial;
 }
 
@@ -260,7 +260,7 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  font-size: medium;
+  font-size: small;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   position: relative;
   z-index: 2;
@@ -279,12 +279,13 @@
 }
 
 .organise-submit {
+  top: 20px;
+  position: inherit;
+  margin-left: 2.7rem;
+  border-radius: 5px;
   border: 1px solid #ffb21a;
-  border-radius: 10px;
   color: black;
-  padding: 0.3rem;
-  display: block;
-  margin-left: 20px;
+  padding: 0.2rem;
 }
 
 .organise-submit:hover {
@@ -306,7 +307,7 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  font-size: medium;
+  font-size: small;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   z-index: 2;
   background-color: #f5f5f5;
@@ -328,7 +329,7 @@
 /* 審核中狀態 campaign-review */
 .campaign-review {
   position: absolute;
-  left: 20px;
+  margin-left: 3rem;
   bottom: 20px;
   padding: 0.2rem;
   border-radius: 5px;
@@ -344,7 +345,7 @@
 /* 已通過狀態 campaign-pass */
 .campaign-pass {
   position: absolute;
-  left: 20px;
+  margin-left: 3rem;
   bottom: 20px;
   padding: 0.2rem;
   border-radius: 5px;
@@ -360,7 +361,7 @@
 /* 未通過狀態 campaign-unpass */
 .campaign-unpass {
   position: absolute;
-  left: 20px;
+  margin-left: 3rem;
   bottom: 20px;
   padding: 0.2rem;
   border-radius: 5px;
@@ -379,7 +380,7 @@
 .campaign-cancel {
   top: 20px;
   position: absolute;
-  left: 10px;
+  margin-left: 2.7rem;
   border-radius: 5px;
   border: 1px solid #ffb21a;
   color: #ffb21a;
@@ -405,8 +406,9 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  font-size: medium;
+  font-size: small;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  position: relative;
   z-index: 2;
   background-color: #f5f5f5;
 }
@@ -425,7 +427,7 @@
 .collect-cancel {
   top: 20px;
   position: absolute;
-  left: 10px;
+  margin-left: 2.7rem;
   border-radius: 5px;
   border: 1px solid #ffb21a;
   color: #ffb21a;
@@ -446,7 +448,7 @@
     font-size: 1.2rem;
   }
 
-  .member-input > input {
+  .member-input>input {
     font-size: 1.2rem;
   }
 }
