--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -38,7 +38,8 @@ nav {
   background-color: var(--body_background_color);
   height: 80px;
   width: 100%;
-  padding: 10px 20px;
+  padding-left: 20px;
+  padding-right: 5px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
 }
 
@@ -52,7 +53,7 @@ nav {
 }
 
 .home_user {
-  border: 3px solid #f7c242;
+  border: 2.5px solid #f7c242;
   border-radius: 30px;
   display: flex;
   justify-content: center;
@@ -95,7 +96,7 @@ nav ul {
 nav ul li {
   display: inline-block;
   list-style: none;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
 }
 
 nav ul li a {
@@ -116,10 +117,7 @@ nav ul li a {
   cursor: pointer;
 }
 .hamburger-icon div {
-  width: 24px;
-  height: 3px;
   background-color: var(--body_background_color);
-  margin: 6px 0;
   transition: 0.4s;
 }
 
@@ -222,6 +220,8 @@ nav ul li a {
 
 .profile-li {
   padding: 20px;
+  color: var(--body_color);
+  font-size: 1rem;
 }
 
 .profile-li a:hover {
@@ -237,7 +237,7 @@ nav ul li a {
 /* ------------------- RWD -------------------- */
 
 @media screen and (max-width: 890px) {
-  .home_header nav .allUl {
+  .allUl_li {
     display: none;
   }
 
