--- a/React-vite/src/notifyPages/notify.css
+++ b/React-vite/src/notifyPages/notify.css
@@ -16,7 +16,6 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-bottom: 1rem;
   background-color: var(--body_background_color);
 }
 
@@ -42,15 +41,16 @@
   border-radius: 20px;
 }
 
-.container {
+.notify_container {
   max-width: 968px;
-  width: 100%;
+  width: 90%;
   padding: 15px;
   background-color: var(--body_background_color);
   border-radius: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   margin-top: 6rem;
   color: var(--body_color);
+  margin-bottom: 1rem;
 }
 
 .container .heading {
@@ -169,10 +169,6 @@
 /**/
 
 @media screen and (max-width: 768px) {
-  .home_header nav .allUl {
-    display: none;
-  }
-
   .home_user {
     display: none;
   }
