--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -131,7 +131,7 @@ nav ul li a {
   font-size: 1rem;
   cursor: pointer;
   text-decoration: none;
-  color: black;
+  color: var(--body_color);
 }
 
 .mobile_activity:hover {
@@ -142,6 +142,7 @@ nav ul li a {
 
 .menubtn {
   font-size: 24px;
+  color: var(--body_color);
 }
 
 .underline {
