--- a/React-vite/src/activity/style3.css
+++ b/React-vite/src/activity/style3.css
@@ -194,6 +194,7 @@
   width: 80%;
   height: 40vh;
   border-radius: 20px;
+  overflow: hidden;
   margin: auto;
 }
 
@@ -201,6 +202,7 @@
   text-align: center;
   width: 80%;
   height: 40vh;
+  overflow: hidden;
   border-radius: 20px;
 }
 
@@ -221,7 +223,7 @@
   padding-right: 5px;
   padding-top: 10px;
   width: 80%;
-  height: 40vh;
+  height: 35vh;
   resize: none;
   font-size: 1rem;
   border-radius: 20px;
