--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -140,11 +140,14 @@
   width: 80%;
   height: 40vh;
   border-radius: 20px;
+  margin: auto;
+  overflow: hidden;
 }
 
 .uploadImage>img {
   width: 80%;
   height: 40vh;
+  overflow: hidden;
   border-radius: 20px;
 }
 
@@ -162,7 +165,7 @@
   padding-right: 5px;
   padding-top: 10px;
   width: 80%;
-  height: 40vh;
+  height: 35vh;
   resize: none;
   font-size: 1rem;
   border-radius: 20px;
@@ -196,13 +199,25 @@
   font-size: 18px;
 }
 
+.selectType {
+  margin-left: 10px;
+  border: 2px solid #f7c242;
+  width: 60%;
+  font-size: 1rem;
+  /* background-color: #f7c242; */
+}
+
 .formType {
   border: none;
   outline: none;
   background-color: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid #f7c242;
   padding-left: 5px;
   margin: 10px;
+}
+
+.box:first-child>input {
+  width: 300px;
 }
 
 .buttonControl {
