--- a/React-vite/src/App.css
+++ b/React-vite/src/App.css
@@ -4,9 +4,9 @@
     --body_color: black;
     --line_color: black;
 }
-
+/*   #293a4c  */
 [data-theme="dark"] {
-    --body_background_color: #293a4c;
+    --body_background_color: #0e1c3f;
     --body_background_color_white: #F5F5F5;
     --body_background_color_dot: #F5F5F5;
     --body_color: #F5F5F5;
