--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -322,7 +322,7 @@
   outline-style: none;
   border: 0px;
   background-color: transparent;
-  color: var(--body_color);
+  color: black;
 }
 
 /* ---------------- 審核狀態 campaign-state start ---------------- */
