--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -227,16 +227,21 @@ main {
 
 .grid-img {
   width: 250px;
+  height: 150px;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .grid-text {
+  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0.5rem;
   text-decoration: none;
   color: var(--body_color);
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .grid_text_txt {
