--- a/React-vite/src/activity/style3.css
+++ b/React-vite/src/activity/style3.css
@@ -82,18 +82,23 @@
   font-weight: bold;
 }
 
-.progress_3:nth-child(1) {
+.progress1 {
   width: 33.3%;
-}
-
-.progress_3:nth-child(2) {
-  width: 33.3%;
-}
-
-.progress_3:nth-child(3) {
-  width: 33.4%;
-  background-color: #f7c242;
+  background-color: lightgray;
   line-height: 50px;
+  font-weight: bold;
+}
+.progress2 {
+  width: 33.3%;
+  font-weight: bold;
+  line-height: 50px;
+  background-color: lightgray;
+}
+.progress3 {
+  font-weight: bold;
+  width: 33.4%;
+  line-height: 50px;
+  background-color: #f7c242;
 }
 
 .activity_main_3 {
