--- a/React-vite/src/activity/style1.css
+++ b/React-vite/src/activity/style1.css
@@ -160,7 +160,7 @@
 }
 /* 上傳圖片的設定 */
 .imageUpload {
-  margin: 50px auto;
+  margin: auto;
   width: 80%;
   border-radius: 20px;
   padding: 20px;
