--- a/React-vite/src/activity/style1.css
+++ b/React-vite/src/activity/style1.css
@@ -146,10 +146,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 .test.tag {
-  padding: 10px;
+  padding: 7.5px 10px;
   margin: 10px;
   border-radius: 20px;
   width: 100px;
