--- a/React-vite/src/activity/style2.css
+++ b/React-vite/src/activity/style2.css
@@ -124,6 +124,8 @@
 }
 
 .hostName {
+  font-size:1.2rem;
+  font-weight: 400;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -132,11 +134,10 @@
 }
 
 .hostName > img {
-  border: 1px solid black;
   width: 50px;
   height: 50px;
   border-radius: 9999px;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .uploadImage {
@@ -196,7 +197,7 @@
 
 .box {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .box > input {
