--- a/React-vite/src/activity/style3.css
+++ b/React-vite/src/activity/style3.css
@@ -166,11 +166,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
 }
 
 .hostName_3 > img {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 50px;
   height: 50px;
   border-radius: 9999px;
@@ -180,16 +179,11 @@
 .place {
   display: flex;
   align-items: center;
-  border: 1px solid black;
 }
 
 .place > span > a {
   text-decoration: none;
   color: black;
-}
-
-.count {
-  border: 1px solid black;
 }
 
 .uploadImage {
