--- a/React-vite/src/activity/style3.css
+++ b/React-vite/src/activity/style3.css
@@ -186,6 +186,12 @@
   color: black;
 }
 
+.googleMap {
+  color: black;
+  width: 600px;
+  height: 400px;
+}
+
 .uploadImage {
   text-align: center;
   width: 80%;
