--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -109,6 +109,36 @@ nav ul li a {
   font-size: 30px;
 }
 
+/* ----------------------------- 提醒圓圈(紅) ----------------------------- */
+
+.login_head_img_box {
+  width: 60px;
+  height: 80px;
+  display: flex;
+  align-items: center
+
+}
+
+/* .remind_circle {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  margin-top: 5px;
+  margin-right: 3px;
+  top: 0;
+  right: 0;
+} */
+
+.remind_circle_icon {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 0;
+  right: 55px;
+  color: red;
+}
+
 /* ----------------------------- RWD導覽列收縮 ----------------------------- */
 
 .hamburger-icon {
